# quickscript-data-extraction-pipeline

./: .gitignore  README.md  pyproject.toml
fixtures/: sample_page.html
src/qdep/: cli.py  export.py  extract.py  log.py  report.py  transform.py  validate.py
tests/: test_pipeline.py
